# ComputationalMathematics

./: CMakeLists.txt  README.md
python/: Riman.py  TwoDimEqThermalCond.py
src/: CMakeLists.txt
src/compMath/graphics/: PlaneParallelFiltering.py  Shooting_Method_graphics.py  SimpleSampleDP.py  ThreeBodiesGraphic.py
src/compMath/integrators/: DormandPrince.hpp  RungeKutta4.hpp
src/compMath/interpolation/: Linear.hpp
src/compMath/matrix/: LinearBoundaryValueProblemMatrix3.hpp  NonLinearBoundaryValueProblemMatrix3.hpp  ThreeDiagonalMatrix.hpp
src/compMath/pythonPlots/: BoundaryProblemGraphic.py
src/compMath/pythonPlots/Rayleigh/: RayleighRKGraphic.py
src/compMath/pythonPlots/planeParallelFiltering/: PlaneParallelFiltering.py
src/compMath/pythonPlots/twoDimEqThermalCond/: plot.py
src/compMath/solvers/: NewtonMethod.hpp  ShootingMethod.hpp  ThreeDiadonalSolver.cpp  ThreeDiadonalSolver.hpp
src/compMath/sparse/: CSR.hpp
src/compMath/types/: BasicTypes.hpp
src/compMath/utility/: Overloads.hpp
src/comp_math/graphics/: BoundaryProblemGraphic.py  DormandPrinceGraphic.py  RungeKuttaGraphic.py  ThreeBodiesGraphic.py  nonlin_shooting_method.py
src/comp_math/integrators/: DormandPrince.hpp  RungeKutta4.hpp
src/comp_math/interpolation/: Linear.hpp  Newton.hpp
src/comp_math/matrix/: LinearBoundaryValueProblemMatrix3.hpp  NonLinearBoundaryValueProblemMatrix3.hpp  ThreeDiagonalMatrix.hpp
src/comp_math/solvers/: NewtonMethod.hpp  ShootingMethod.hpp  ThreeDiadonalSolver.hpp
src/comp_math/sparse/: CSR.hpp
src/comp_math/utility/: Overloads.hpp
(+14 files in other folders)
